01-traefik-vpn-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: kube-system
  annotations:
    k8s.rabbitmq.cn/displayName: rabbitmq
    k8s.rabbitmq.cn/workload: rabbitmq
    kubernetes.io/ingress.class: "traefik-internet-vpn"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-common-headers@kubernetescrd
spec:
  rules:
  - host: rabbitmq.internal-devops.development.npool.top
    http:
      paths:
      - path: /
        backend:
          serviceName: rabbitmq
          servicePort: http-stats
